# XCache_Testing_Fun

./: README.md
XrdCLROProxyPlugin/: CMakeLists.txt  README.md
XrdCLROProxyPlugin/etc/: CMakeLists.txt
XrdCLROProxyPlugin/etc/xrootd/client.plugins.d/: ProxyRW-plugin.conf
XrdCLROProxyPlugin/src/: CMakeLists.txt  ProxyRWPrefixFile.cc  ProxyRWPrefixFile.hh  ProxyRWPrefixPlugin.cc  ProxyRWPrefixPlugin.hh
docs/: xcache_hardware_requirements.md  xcache_monitoring.md  xcache_proxy_plugin.md  xcache_server_setup.md  xcache_server_setup_old.md  xcache_server_testing.md  xcache_server_traffic_smoothing.md  xcache_transparent_testing.md
logging/: cache_reporter.py  logstash.conf
